erDiagram
    users ||--o{ trips : "crée"
    users ||--o| user_preferences : "configure"
    users ||--o{ trip_collaborators : "participe"
    trips ||--o{ packs : "contient"
    trips ||--o{ trip_collaborators : "partagé via"
    packs ||--o{ trip_votes : "reçoit"

    users {
        uuid id PK
        text email UK
        text password
        text name
        text avatar_url
        timestamptz created_at
        timestamptz updated_at
    }
    trips {
        uuid id PK
        uuid user_id FK
        text title
        text destination
        text country
        text origin
        date departure
        date return_date
        int travelers
        text budget
        text mode
        boolean premium
        text status
        float score
        jsonb pack_data
        timestamptz created_at
        timestamptz updated_at
    }
    packs {
        uuid id PK
        uuid trip_id FK
        int rank
        float score
        jsonb pack_data
        boolean selected
        timestamptz created_at
    }
    trip_votes {
        uuid id PK
        uuid pack_id FK
        text item_id
        text voter_name
        boolean vote_type
        timestamptz created_at
    }
    user_preferences {
        uuid user_id PK
        text default_mode
        boolean default_premium
        text preferred_prefs
        text home_city
        text currency
        timestamptz updated_at
    }
    trip_collaborators {
        uuid trip_id PK
        uuid user_id PK
        text role
        timestamptz invited_at
    }
